# Tetrika-Tests

./: README.md  pyproject.toml
task1/: solution.py  tests.py
task2/: beasts.csv  solution.py  tests.py
task3/: solution.py  tests.py
