[project]
name = "test-tasks"
version = "0.1.0"
description = ""
authors = [
    { name = "Timur Berezin", email = "corporate.timur01@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "lxml (>=5.4.0,<6.0.0)",
    "pytest (>=8.3.5,<9.0.0)"
]


[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
